:green_heart: fix: build and release

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -15,7 +15,11 @@ jobs:
           - os: ubuntu-latest
             install: sudo apt-get update && sudo apt-get install -y libboost-all-dev clang
           - os: windows-latest
-            install: choco install llvm boost-msvc
+            install: |
+                   choco install llvm
+                   powershell -Command "Invoke-WebRequest -Uri 'https://boostorg.jfrog.io/artifactory/main/release/1.80.0/binaries/boost_1_80_0-msvc-14.1-64.exe' -OutFile 'boost_installer.exe'"
+                   powershell -Command "Start-Process 'boost_installer.exe' -ArgumentList '/S' -Wait"
+                   set PATH=C:\local\boost_1_80_0\lib64-msvc-14.1;%PATH%
           - os: fedora-latest
             install: sudo dnf install -y clang boost-devel
           - os: centos-latest
@@ -35,7 +39,7 @@ jobs:
       - name: Build project
         run: |
           if [ "${{ matrix.os }}" == "windows-latest" ]; then
-            clang++ -o cmr_cache.exe main.cpp -I./vendor/yaml -lboost_system -lpthread -std=c++17 -O3
+            clang++ -o cmr_cache.exe main.cpp -I./vendor/yaml -I"C:/local/boost_1_80_0" -L"C:/local/boost_1_80_0/lib64-msvc-14.1" -lboost_system-vc141-mt-x64-1_80 -lpthread -std=c++17 -O3
           else
             clang++ -o cmr_cache main.cpp -I./vendor/yaml -lboost_system -lpthread -std=c++17 -O3
           fi
