--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -43,9 +43,8 @@ jobs:
         if: matrix.os != 'windows-latest'
         run: clang++ -o cmr_cache main.cpp -I./vendor/yaml -lboost_system -lpthread -std=c++17
 
-
       - name: Create Release Archive - Windows
-        if: matrix.os != 'windows-latest'
+        if: matrix.os == 'windows-latest'
         run: |
           mkdir -p release
           cp cmr_cache.exe release/
