--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -50,7 +50,7 @@ jobs:
         if: matrix.os == 'windows-latest'
         id: extract_tag-win
         run: |
-            pwsh -Command "$TAG_NAME = '${env:GITHUB_REF}' -replace 'refs/tags/', ''; echo 'TAG_NAME=$TAG_NAME' | Out-File -FilePath '$env:GITHUB_ENV' -Append"
+           pwsh -Command "$TAG_NAME = '${env:GITHUB_REF}' -replace 'refs/tags/', ''; [System.IO.File]::WriteAllText('$env:GITHUB_ENV', \"TAG_NAME=$TAG_NAME`n\", [System.Text.Encoding]::UTF8)"
         shell: bash
 
       - name: Extract the tag name - Others OS
