:adhesive_bandage: fix: add CMakeLists and gtest

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,13 +17,25 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: sudo apt-get install -y libboost-all-dev
+        run: sudo apt-get install -y libboost-all-dev libgtest-dev
 
       - name: Set up Clang
         run: |
           sudo apt-get update
           sudo apt-get install -y clang
 
-      - name: Build
+      - name: Build Application
         run: |
-          clang++ -o cmr_cache main.cpp -I./vendor/yaml -I/usr/local/include/boost -L/usr/local/lib -lboost_system -lpthread -std=c++17
+          clang++ -o cmr_cache main.cpp -I./vendor/ -I/usr/local/include/boost -L/usr/local/lib -lboost_system -lpthread -std=c++17
+
+      - name: Build Tests
+        run: |
+          clang++ -o run-tests ./tests/unit/main.cpp -I./vendor/ -I/usr/local/include/boost  -I/usr/local/include/ -L/usr/local/lib/ -l:libgtest.a -l:libgtest_main.a  -L/usr/local/lib -lboost_system -lpthread -std=c++17
+
+      - name: Run Tests
+        run: |
+          ./run-tests
+
+      - name: Delete file
+        run: |
+          rm -fr ./run-tests
