--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -49,26 +49,26 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Clang
-        if: matrix.ostype == "windows"
+        if: matrix.ostype == windows
         uses: egor-tensin/setup-clang@v1
 
       - name: Install dependencies
         run: ${{ matrix.install }}
 
       - name: Build - Windows (x64)
-        if: matrix.ostype == "windows" && matrix.arch == "x64"
+        if: matrix.ostype == windows && matrix.arch == x64
         run: clang++ -o cmr_cache.exe main.cpp -I./vendor/ -I./boost/ -L./boost/lib -llibboost_system-vc143-mt-x64-1_85 -std=c++17
 
       - name: Build - Windows (x86)
-        if: matrix.ostype == "windows" && matrix.arch == "x86"
+        if: matrix.ostype == windows && matrix.arch == x86
         run: clang++ -o cmr_cache.exe main.cpp -I./vendor/ -I./boost/ -L./boost/lib -llibboost_system-vc143-mt-x32-1_85 -std=c++17 -m32
       
       - name: Build - Linux (x64)
-        if: matrix.ostype != "windows" && matrix.arch == "x64"
+        if: matrix.ostype != windows && matrix.arch == x64
         run: clang++ -o cmr_cache main.cpp -I./vendor/ -I/usr/include/boost -L/usr/lib/x86_64-linux-gnu -lboost_system -lpthread -std=c++17
 
       - name: Build - Linux (x86)
-        if: matrix.ostype != "windows" && matrix.arch == "x86"
+        if: matrix.ostype != windows && matrix.arch == x86
         run: clang++ -o cmr_cache main.cpp -I./vendor/ -I/usr/include/boost -L/usr/lib/i386-linux-gnu -lboost_system -lpthread -std=c++17 -m32
 
       - name: Get the tag
@@ -87,7 +87,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create Release Archive - Windows
-        if: matrix.ostype == "windows"
+        if: matrix.ostype == windows
         run: |
           mkdir -p release
           cp cmr_cache.exe release/
@@ -96,7 +96,7 @@ jobs:
           tar -czf cmr_cache_${{ matrix.os }}_${{ matrix.arch }}.tar.gz release
 
       - name: Create Release Archive - Others OS
-        if: matrix.ostype != "windows"
+        if: matrix.ostype != windows
         run: |
           mkdir -p release
           cp cmr_cache release/
