--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -15,16 +15,16 @@ jobs:
         include:
           - os: ubuntu-latest
             ostype: linux
-            install: sudo apt-get update && sudo apt-get install -y libboost-all-dev clang
+            install: sudo apt-get update && sudo apt-get install -y libboost-all-dev clang g++-multilib libc++-dev libc++abi-dev
           - os: ubuntu-24.04
             ostype: linux
-            install: sudo apt-get update && sudo apt-get install -y libboost-all-dev clang
+            install: sudo apt-get update && sudo apt-get install -y libboost-all-dev clang g++-multilib libc++-dev libc++abi-dev
           - os: ubuntu-22.04
             ostype: linux
-            install: sudo apt-get update && sudo apt-get install -y libboost-all-dev clang
+            install: sudo apt-get update && sudo apt-get install -y libboost-all-dev clang g++-multilib libc++-dev libc++abi-dev
           - os: ubuntu-20.04
             ostype: linux
-            install: sudo apt-get update && sudo apt-get install -y libboost-all-dev clang
+            install: sudo apt-get update && sudo apt-get install -y libboost-all-dev clang g++-multilib libc++-dev libc++abi-dev
           - os: windows-latest
             ostype: windows
             install: |
