:green_heart: fix: build x86

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -15,16 +15,28 @@ jobs:
         include:
           - os: ubuntu-latest
             ostype: linux
-            install: sudo apt-get update && sudo apt-get install -y libboost-all-dev clang g++-multilib libc++-dev libc++abi-dev
+            install: |
+              sudo dpkg --add-architecture i386
+              sudo apt-get update
+              sudo apt-get install libboost-all-dev libboost-all-dev:i386 clang g++-multilib libc++-dev libc++abi-dev
           - os: ubuntu-24.04
             ostype: linux
-            install: sudo apt-get update && sudo apt-get install -y libboost-all-dev clang g++-multilib libc++-dev libc++abi-dev
+            install: |
+              sudo dpkg --add-architecture i386
+              sudo apt-get update
+              sudo apt-get install libboost-all-dev libboost-all-dev:i386 clang g++-multilib libc++-dev libc++abi-dev
           - os: ubuntu-22.04
             ostype: linux
-            install: sudo apt-get update && sudo apt-get install -y libboost-all-dev clang g++-multilib libc++-dev libc++abi-dev
+            install: |
+              sudo dpkg --add-architecture i386
+              sudo apt-get update
+              sudo apt-get install libboost-all-dev libboost-all-dev:i386 clang g++-multilib libc++-dev libc++abi-dev
           - os: ubuntu-20.04
             ostype: linux
-            install: sudo apt-get update && sudo apt-get install -y libboost-all-dev clang g++-multilib libc++-dev libc++abi-dev
+            install: |
+              sudo dpkg --add-architecture i386
+              sudo apt-get update
+              sudo apt-get install libboost-all-dev libboost-all-dev:i386 clang g++-multilib libc++-dev libc++abi-dev
           - os: windows-latest
             ostype: windows
             install: |
